--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -358,3 +358,9 @@ textarea {
     transform: scale(1.05);
     background: linear-gradient(45deg, #c850c0, #ffcc70);
 }
+
+/* sd-html sd-element--nested sd-html--nested */
+
+.sd-html {
+    color: #000 !important;
+}
