--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,6 +102,10 @@ header a {
     button {
         @apply py-2 px-4 bg-blue-500 hover:bg-blue-500/75 font-semibold uppercase rounded-sm;
     }
+
+    mark {
+        background-color: rgba(110, 164, 206, 0.7);
+    }
 }
 
 @layer utilities {
