--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,9 +78,13 @@ html {
     scroll-behavior: smooth;
 }
 
-main a {
+/* main a {
     text-decoration: underline;
-}
+} */
+
+/* section {
+    text-decoration: none !important;
+} */
 
 header a {
     text-decoration: none;
@@ -100,7 +104,7 @@ header a {
     }
 
     a {
-        @apply block w-fit /*text-blue-700 hover:text-red-800*/ underline;
+        @apply block w-fit /*text-blue-700 hover:text-red-800*/ /*underline*/;
     }
 
     button {
