--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -351,3 +351,19 @@ textarea {
         width: 100% !important;
     }
 }
+
+/* html,
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #151912;
+    overflow-x: hidden;
+}
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+} */
