--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -367,3 +367,29 @@ canvas {
     width: 100%;
     height: 100%;
 } */
+
+/* html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #151912;
+    overflow-x: hidden;
+  }
+  
+  .section {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  } */
+
+.background-interact html body {
+    overflow: auto !important;
+    height: auto !important;
+}
